HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeImpureCall/Expected.uv
//! Expected diagnostic metadata for the SpeculativeImpureCall rejected-source specimen.

expectedDiagnostic("E-CON-0097", "rule.19.K-Spec-No-Impure-Call")
